--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,46 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-aiohttp==3.9.1
-beautifulsoup4==4.12.2
-requests==2.31.0
-whois==0.9.27
-tldextract==5.1.1
-dnspython==2.4.2
-fake-useragent==1.4.0
-certifi==2023.11.17
-python-whois==0.8.0
-jinja2==3.1.2
-python-multipart==0.0.6
-numpy==1.24.3
-pandas==2.0.3
-scikit-learn==1.3.0
-joblib==1.3.2
+aiofiles==25.1.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.3
+aiosignal==1.4.0
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==4.12.1
+attrs==25.4.0
+beautifulsoup4==4.14.3
+certifi==2026.1.4
+charset-normalizer==3.4.4
+click==8.3.1
+colorama==0.4.6
+dnspython==2.8.0
+fake-useragent==2.2.0
+fastapi==0.129.0
+filelock==3.24.3
+frozenlist==1.8.0
+h11==0.16.0
+idna==3.11
+Jinja2==3.1.6
+joblib==1.5.3
+MarkupSafe==3.0.3
+multidict==6.7.1
+numpy==2.4.2
+pandas==3.0.1
+propcache==0.4.1
+pydantic==2.12.5
+pydantic_core==2.41.5
+python-dateutil==2.9.0.post0
+python-whois==0.9.6
+requests==2.32.5
+requests-file==3.0.1
+scikit-learn==1.8.0
+scipy==1.17.0
+six==1.17.0
+soupsieve==2.8.3
+starlette==0.52.1
+threadpoolctl==3.6.0
+tldextract==5.3.1
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.3
+urllib3==2.6.3
+uvicorn==0.41.0
+yarl==1.22.0
